# weightdatacollect

./: README.md
refCode/: CMakeLists.txt  camParam.sh  config.ini  copy.sh  main.cpp  main_weightorpic.cpp  sql_ifly.cpp  sql_ifly.h  update_weight.py  weight.conf  weight.cpp
refCode/ini/: INIReader.cpp  INIReader.h  ini.c  ini.h
