cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
if(POLICY CMP0046)
  cmake_policy(SET CMP0046 NEW)
endif()
if(POLICY CMP0054)
  cmake_policy(SET CMP0054 NEW)
endif()

project(weight)
add_compile_options(-std=c++11 -fpermissive)

include_directories($ENV{PBS_INC}) 
link_directories($ENV{PBS_LIB}) 
include_directories($ENV{PCL_INC})
link_directories($ENV{PCL_LIB})
include_directories($ENV{OPENCV_INC})
link_directories($ENV{OPENCV_LIB})
include_directories($ENV{VTK_INC})
link_directories($ENV{VTK_LIB}) 
include_directories($ENV{BOOST_INC})
link_directories($ENV{BOOST_LIB}) 
include_directories($ENV{EIGEN_INC})
link_directories($ENV{EIGEN_LIB}) 
include_directories($ENV{FLANN_INC})
link_directories($ENV{FLANN_LIB}) 
include_directories($ENV{JSON_INC})
link_directories($ENV{JSON_LIB}) 
include_directories($ENV{QHULL_INC})
link_directories($ENV{QHULL_LIB}) 

include_directories($ENV{OPENNI2_INCLUDE}) 
link_directories($ENV{OPENNI2_REDIST}) 
add_executable (weight weight.cpp sql_ifly.cpp ini/INIReader.cpp ini/ini.c)
target_link_libraries (weight -lsqlite3 -lpthread -lOpenNI2 -lopencv_imgproc -lopencv_core -lopencv_highgui -lopencv_imgcodecs -lboost_system -lpcl_common -lpcl_io -ljsoncpp -lpbs -lpcl_filters)

